predisposizione compilazione in vscode #fatto

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "cstdint": "cpp",
         "cstdio": "cpp",
         "cstdlib": "cpp",
-        "cwchar": "cpp"
+        "cwchar": "cpp",
+        "iostream": "cpp"
     }
 }
