--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,7 @@
                 "kind": "build",
                 "isDefault": true
             },
-            "command": "mingw32-make -j 8",
+            "command": "mingw32-make -j 8",//  -Oline
             "presentation": {
                 "clear": true
             }
@@ -29,6 +29,7 @@
             "label": "Rebuild",
             "type": "shell",
             "group": "build",
+            //"command": "mingw32-make -j 8 -O rebuild",
             "command": "mingw32-make clean && mingw32-make -j 8",
             "presentation": {
                 "clear": true
