--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
+        "*.rc": "ini",
         "*.inc": "php",
         "*.php.old": "php",
         "string": "cpp",
