geometry shader funziona, altre predisposizioni x particle system

--- a/engine/resources/resources.rc
+++ b/engine/resources/resources.rc
@@ -11,5 +11,8 @@ WIREFRAMESHADER_VERT    RCDATA  "engine/shaders/glsl/wireframeshader.vert"
 WIREFRAMESHADER_FRAG    RCDATA  "engine/shaders/glsl/wireframeshader.frag"
 PHONGSHADER_VERT        RCDATA  "engine/shaders/glsl/phongshader.vert"
 PHONGSHADER_FRAG        RCDATA  "engine/shaders/glsl/phongshader.frag"
+PARTICLESSHADER_VERT    RCDATA  "engine/shaders/glsl/particlesshader.vert"
+PARTICLESSHADER_FRAG    RCDATA  "engine/shaders/glsl/particlesshader.frag"
+PARTICLESSHADER_GEOM    RCDATA  "engine/shaders/glsl/particlesshader.geom"
 
 IMG_AVATAR              RCDATA  "engine/resources/avatar.png"
