refactoring component lists => multiset ordered

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,10 @@
         "condition_variable": "cpp",
         "iomanip": "cpp",
         "mutex": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "set": "cpp",
+        "list": "cpp",
+        "typeindex": "cpp",
+        "variant": "cpp"
     }
 }
