--- a/game/resources/config-engine.ini
+++ b/game/resources/config-engine.ini
@@ -13,6 +13,7 @@ fixedrate_limit = 60
 [Debug]
 debug_level = INFO
 debug_enabled = Y
+debuginfo_enabled = Y
 debuggrid_mode = ORTHOGRAFIC
 
 [Physics]
