--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,13 @@
 {
-    //"files.exclude": {
-    //    "**/bin": true,
-    //    "**/obj": true,
-    //    "**/.makefiles": true,
-    //    "**/.vscode": true,
-    //    ".gitignore": true,
-    //    "makefile": true,
-    //    "*.bat": true
-    //},
+    "files.exclude": {
+        "**/bin": true,
+        "**/obj": true,
+        "**/.makefiles": true,
+        "**/.vscode": true,
+        ".gitignore": true,
+        "makefile": true,
+        "*.bat": true
+    },
     "files.associations": {
         "*.inc": "php",
         "*.php.old": "php",
