fix problemi font embedded e destructors

--- a/game/resources/config-engine.ini
+++ b/game/resources/config-engine.ini
@@ -14,6 +14,8 @@ fixedrate_limit = 60
 debug_level = INFO
 debug_enabled = Y
 debuginfo_enabled = Y
+debug_draw_rect_transforms = Y
+debug_draw_transforms = Y
 debuggrid_mode = ORTHOGRAFIC
 
 [Physics]
