--- a/engine/resources/resources.rc
+++ b/engine/resources/resources.rc
@@ -17,4 +17,4 @@ PARTICLESSHADER_GEOM    RCDATA  "engine/shaders/glsl/particlesshader.geom"
 
 IMG_AVATAR              RCDATA  "engine/resources/avatar.png"
 
-FONT_CONSOLAS           RCDATA  "engine/resources/consolas.ttf"
+FONT_CONSOLAS           FONT    "engine/resources/consolas.ttf"
