continua grande refactoring per precompiled headers - modifica makefiles (ci sono ancora problemi)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -68,7 +68,7 @@
         {
             "label": "Build current file",
             "type": "shell",
-            "command": "mingw32-make single FILE=${fileBasenameNoExtension}",
+            "command": "mingw32-make single FILE=${relativeFile}",
             "problemMatcher": [],
             "presentation": {
                 "clear": true
