--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     //"files.exclude": {
     //    "**/bin": true,
     //    "**/obj": true,
+    //    "**/include": true,
     //    "**/.makefiles": true,
     //    "**/.vscode": true,
     //    ".gitignore": true,
